fix(styles): remove `letter spacing` from sidebar layouts;

--- a/styles/layouts/sidebar.style.scss
+++ b/styles/layouts/sidebar.style.scss
@@ -122,7 +122,6 @@
 
 		font-size: 1.785rem;
 		line-height: 2rem;
-		letter-spacing: -0.075rem;
 
 		place-items: center;
 		place-content: center;
